--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Webpage</test>
+        <title>My Webpage</title>
     </head>
     <body>
         hello world!
         hello again hello hello hello
-        here is the new feature
     </body>
 </html>
