--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,7 @@
         hello world!
         hello again hello hello hello
         here is the new feature.
+        git pull = git fetch + git merge origon/master
+        after merge is the one u want to merge with current code
     </body>
 </html>
